# hangultaja

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile.am  README  README.md  autogen.sh  configure.ac  hangul.cpp  hangul.hpp  help.hpp  main.cpp  taja.hpp
res/: short.txt
res/long/: anthem.txt  camellia.txt  cheongsando.txt  dulsaram_eol.txt  hangullal.txt  last_leaf.txt  rain.txt  rich_and_donkey.txt  star.txt  starring_night.txt  the_little_prince.txt
src/: main.cpp  taja.cpp  taja.hpp
